removed ollama + small fe fixes
